[project]
name = "limits"
version = "0.1.0"
description = "A terminal app that displays OS configuration and limits helpful to debug issues."
requires-python = ">=3.13"
dependencies = [
    "humanize>=4.12.3",
    "psutil>=7.0.0",
    "textual>=3.5.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.0",
    "textual-dev>=1.7.0",
]
