[project]
name = "limits"
version = "0.1.0"
description = "A terminal app that displays OS configuration and limits helpful to debug issues."
requires-python = ">=3.13"
dependencies = [
    "humanize>=4.15.0",
    "psutil>=7.2.1",
    "textual>=7.3.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.14.13",
    "textual-dev>=1.8.0",
]
